test/type_inference/negative/type_args6.impala
trait T[X] {}
impl T[bool] for i32 {}
impl T[i32] for i32 {}

fn f[A, B: T[A]](b: B) -> () {}

fn main() -> () {
    f(4)
}
