test/type_inference/negative/type_args6.output
type_args6.impala:8 col 5 - 8: error: could not find instance for type variable #0
